--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,8 @@
-
 body {
     font-family: "Crimson Text", serif;
     background-color: #F2FFFC;
     line-height: 1.5;
-    font-size: 120%;
+    font-size: 110%;
 }
 
 
@@ -11,7 +10,7 @@ body {
 h1,
 h2 {
     font-family: "Open Sans Condensed", sans-serif;
-    font-size: 30px;
+    font-size: 130%;
     clear: both;
 }
 
@@ -26,17 +25,16 @@ strong{
 .titulo {
     text-align: center;
     background-color: #851944;
-    font-size: 50px;
+    font-size: 260%;
     color: #FFF;
-    padding: 24px;
-    margin: 0px;
-    border-bottom: 10px solid #000;
+    padding: 2rem;
+    border-bottom: .8rem solid #000;
     text-transform: uppercase;
 }
 
 p {
     text-align: justify;
-    margin: 20px 0;
+    margin: .8rem 0;
 }
 
 main {
@@ -53,22 +51,22 @@ main a{
 	width: 720px;
     margin-left: auto;
     margin-right: auto;
-    padding: 30px 0;
+    padding: 1rem 0;
     padding-bottom: 65px;
 }
 
 
 .post-box {
-    padding-bottom: 30px;
+    padding-bottom: 1em;
     border-bottom: 1px solid #ccc;
-    margin-bottom: 20px;
+    margin-bottom: .8em;
 }
 
 
 .leia-mais{
-    font-size: 21px;
-    padding: 6px;
-    margin: 6px;
+    font-size: 1.15em;
+    padding: .5em;
+    margin: .6em;
     text-align: center;
     display: block;
     background-color: #E6E7E8;
@@ -76,9 +74,10 @@ main a{
 
 .depoimentos {
     background-color: #D9E5E3;
-    border: 10px solid #c2ccCA;
-    width: 250px;
-    margin: 20px 40px;
+    border: .4em solid #c2ccCA;
+    width: 30ch;
+    padding: .8em;
+    margin: .8em 1.5em;
     box-sizing: border-box; /* calcula automaticamente, em relacao a borda, o tamanho total do box */
 }
 .petrobras{
@@ -96,8 +95,8 @@ main a{
 
 .perfil-foto,
 .navegacao {
-    border-left: 10px solid black;
-    border-bottom: 10px solid black;
+    border-left: .8rem solid black;
+    border-bottom: .8rem solid black;
     box-sizing: border-box;
 }
 
@@ -107,14 +106,14 @@ main a{
     right: 0px;
     background-color: #3C1D3D;
     color: #F2FFFC;
-    padding: 20px;
+    padding: 1em;
     text-align: center;
     clear: right;
     width: 15%;
 }
 
 .navegacao h1{
-	margin-bottom: 25px;
+	margin-bottom: 1em;
     text-transform: uppercase;
 }
 
@@ -128,8 +127,6 @@ main a{
 .navegacao li{
     display: block;
 }
-
-
 
 .social-menu li{
     display: inline-block;
@@ -161,12 +158,12 @@ main a{
 }
 
 .portifolio-box li{
-    border: 8px solid;
+    border: .4em solid;
     border-color: #000;
     background-color: #fafffc;
-    padding: 16px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    padding: .6em;
+    margin-right: .6em;
+    margin-bottom: .6em;
     box-sizing: border-box;
     width: 46%;
 }
@@ -199,5 +196,5 @@ footer div {
 /* sempre generalize as regras css */
 blockquote,
 footer {
-	 padding: 16px;
+	 padding: .8em;
 }
