--- a/css/index.css
+++ b/css/index.css
@@ -65,16 +65,45 @@
     background-color: #999;
     color: #FFF;
     border-bottom: .5em solid #851944;
+    position: relative;
 }
 .blog small {
     position: relative;
     top: -2em;
+}
+.blog li {
+    color: #FCF;
+    padding: .4em;
+    display: block;
+    width: 40%;
 }
 .blog li a {
     color: #FCF;
     padding: .4em;
     display: block;
 }
+
+.ultimo-post{
+    background-color: #F2FFFC;
+
+}
+
+.ultimo-post a{
+    color: #F26;
+
+}
+
+.ultimo-post p{
+    position: absolute;
+    top: 4em;
+    height: 8em;
+    left: 30%;
+    right: 4em;
+    background-color: #F2FFFC;
+    color: #000;
+    padding: 1.5em;
+}
+
 footer {
     background-color: #000;
     color: #FFF;
