--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 .foto-home {
     height: 200px;
+    border-radius: 0 50%;
 }
 .saudacao p {
     font-size: 1.5em;
@@ -132,44 +133,55 @@ main {
 .eficiencia {
     top: 20%;
     left: 75%;
+    transform: rotate(-5deg);
 }
 .boas-praticas {
     top: 70%;
     left: 20%;
+    transform: rotate(5deg);
 }
 .codigo-limpo {
     top: 45%;
     left: 10%;
+    transform: rotate(-5deg);
 }
 .css3 {
     top: 50%;
     left: 30%;
+    transform: rotate(7deg);
 }
 .html5 {
     top: 40%;
     left: 80%;
+    transform: rotate(-5deg);
 }
 .javascript {
     top: 10%;
     left: 60%;
+    transform: rotate(5deg);
 }
 .acessibilidade {
     top: 30%;
     left: 25%;
+    transform: rotate(4deg);
 }
 .responsivo {
     top: 15%;
     left: 15%;
+    transform: rotate(-5deg);
 }
 .otimizacoes {
     top: 60%;
     left: 70%;
+    transform: rotate(4deg);
 }
 .agilidade {
     top: 10%;
     left: 30%;
+    transform: rotate(-5deg);
 }
 .design {
     top: 35%;
     left: 65%;
+    transform: rotate(-6deg);
 }
