--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,16 @@
     transform: translate(6.5765em, -2.4745em) rotate(45deg);
 }
 .palavras-chave{
-     perspective: 500px;
+  perspective: 6px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.palavras-chave li {
+  font-size: 400%;
 }
 
 .foto-home {
@@ -162,57 +171,57 @@ main {
 
 /* Palavras do header */
 .eficiencia {
-    top: 20%;
-    left: 75%;
-    transform: rotate(-5deg);
+  top: 50%;
+  left: 60%;
+  transform: translate(-50%, -50%) rotate(-5deg) translateZ(4px) scale(0.25);
 }
 .boas-praticas {
-    top: 70%;
-    left: 20%;
-    transform: rotate(5deg);
+  top: 70%;
+  left: 20%;
+  transform: translate(-50%, -50%) rotate(10deg) translateZ(1px) scale(0.25);
 }
 .codigo-limpo {
-    top: 45%;
-    left: 10%;
-    transform: rotate(-5deg);
+  top: 45%;
+  left: 25%;
+  transform: translate(-50%, -50%) rotate(-10deg) translateZ(2px) scale(0.25);
 }
 .css3 {
-    top: 50%;
-    left: 30%;
-    transform: rotate(7deg);
+  top: 55%;
+  left: 35%;
+  transform: translate(-50%, -50%) rotate(5deg) translateZ(2px) scale(0.25);
 }
 .html5 {
-    top: 40%;
-    left: 80%;
-    transform: rotate(-5deg);
+  top: 30%;
+  left: 65%;
+  transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
 }
 .javascript {
-    top: 10%;
-    left: 60%;
-    transform: rotate(5deg);
+  top: 15%;
+  left: 60%;
+  transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px) scale(0.25);
 }
 .acessibilidade {
-    top: 30%;
-    left: 25%;
-    transform: rotate(4deg);
+  top: 30%;
+  left: 35%;
+  transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px) scale(0.25);
 }
 .responsivo {
-    top: 15%;
-    left: 15%;
-    transform: rotate(-5deg);
+  top: 40%;
+  left: 40%;
+  transform: translate(-50%, -50%) rotate(10deg) translateZ(3px) scale(0.25);
 }
 .otimizacoes {
-    top: 60%;
-    left: 70%;
-    transform: rotate(4deg);
+  top: 70%;
+  left: 65%;
+  transform: translate(-50%, -50%) rotate(-5deg) translateZ(2px) scale(0.25);
 }
 .agilidade {
-    top: 10%;
-    left: 30%;
-    transform: rotate(-5deg);
+  top: 75%;
+  left: 35%;
+  transform: translate(-50%, -50%) rotate(5deg) translateZ(1px) scale(0.25);
 }
 .design {
-    top: 35%;
-    left: 65%;
-    transform: rotate(-6deg);
+  top: 40%;
+  left: 60%;
+  transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
 }
