--- a/css/index.css
+++ b/css/index.css
@@ -93,8 +93,20 @@ body {
     font-size: 3em;
     text-transform: uppercase;
     margin-bottom: .4em;
+    text-shadow: 2px 2px #000;
 }
 .trabalhos {
+
+    background-image: linear-gradient(135deg,
+                        transparent,
+                        transparent 14px,
+                        rgba(0, 0, 0, 0.2) 14px,
+                        rgba(0, 0, 0, 0.2) 15px,
+                        transparent 15px,
+                        transparent);
+    background-size: 20px 20px;
+    background-attachment: fixed;
+
     background-color: #3C1D3D;
     border-top: .6rem solid #000;
     border-bottom: .6rem solid #000;
@@ -115,6 +127,16 @@ body {
     display: block;
 }
 .blog {
+    background-image: linear-gradient(45deg,
+                        transparent,
+                        transparent 14px,
+                        rgba(255, 255, 255, 0.2) 14px,
+                        rgba(255, 255, 255, 0.2) 15px,
+                        transparent 15px,
+                        transparent);
+    background-size: 20px 20px;
+    background-attachment: fixed;
+
     background-color: #999;
     color: #FFF;
     border-bottom: .5em solid #851944;
@@ -185,55 +207,65 @@ main {
 .eficiencia {
   top: 50%;
   left: 60%;
-  transform: translate(-50%, -50%) rotate(-5deg) translateZ(4px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(4px) rotate(-5deg) scale(.25);
 }
 .boas-praticas {
   top: 70%;
   left: 20%;
-  transform: translate(-50%, -50%) rotate(10deg) translateZ(1px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(1px) rotate(10deg) scale(.25);
+  opacity: .3;
 }
 .codigo-limpo {
   top: 45%;
   left: 25%;
-  transform: translate(-50%, -50%) rotate(-10deg) translateZ(2px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(2px) rotate(-10deg) scale(.25);
+  opacity: .6;
 }
 .css3 {
   top: 55%;
   left: 35%;
-  transform: translate(-50%, -50%) rotate(5deg) translateZ(2px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(2px) rotate(5deg) scale(.25);
+  opacity: .6;
 }
 .html5 {
   top: 30%;
   left: 65%;
-  transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+  opacity: .6;
 }
 .javascript {
   top: 15%;
   left: 60%;
-  transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(1px) rotate(-5deg) scale(.25);
+  opacity: .3;
 }
 .acessibilidade {
   top: 30%;
   left: 35%;
-  transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(3px) rotate(-5deg) scale(.25);
+  opacity: .8;
 }
 .responsivo {
   top: 40%;
   left: 40%;
-  transform: translate(-50%, -50%) rotate(10deg) translateZ(3px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(3px) rotate(10deg) scale(.25);
+  opacity: .8;
 }
 .otimizacoes {
   top: 70%;
   left: 65%;
-  transform: translate(-50%, -50%) rotate(-5deg) translateZ(2px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(2px) rotate(-5deg) scale(.25);
+  opacity: .6;
 }
 .agilidade {
   top: 75%;
   left: 35%;
-  transform: translate(-50%, -50%) rotate(5deg) translateZ(1px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(1px) rotate(5deg) scale(.25);
+  opacity: .3;
 }
 .design {
   top: 40%;
   left: 60%;
-  transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
+  transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(.25);
+  opacity: .6;
 }
