--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,19 +62,17 @@ main a{
     padding-bottom: 65px;
 }
 
-
-.post-box {
-    padding-bottom: 1em;
-    margin-bottom: .8em;
-    background-image: linear-gradient(to right,
-        rgba(200, 200, 200, 0),
-        rgba(200, 200, 200, 1),
-        rgba(200, 200, 200, 0));
-    background-size: 100% 1px;
-    background-repeat: no-repeat;
-    background-position: bottom center;
+.post-box + .post-box {
+  /* trocamos padding-bottom e margin-bottom por
+     padding-top e margin-top */
+  padding-top: 1em;
+  margin-top: 1.5em;
+  background-image: linear-gradient(to right, rgba(200, 200, 200, 0), rgba(200, 200, 200, 1), rgba(200, 200, 200, 0));
+  background-size: 100% 1px;
+  background-repeat: no-repeat;
+  /* trocamos "bottom center" por "top center" */
+  background-position: top center;
 }
-
 
 .leia-mais{
     font-size: 1.15em;
