--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,9 @@
     transform-origin: 0 0;
     /*Calculo da faixa do twitter hardcoded: transform: translate(6.5765em, -2.4745em) rotate(45deg);*/
     transform: translate(calc(.707 * (3.5em - 100%) + 100%), calc(-.707 * 3.5em)) rotate(45deg);
+    animation: aparece 0.5s;
+    animation-delay: 1s;
+    animation-fill-mode: backwards;
 }
 html,body {
     overflow-x: hidden;
@@ -39,6 +42,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  animation: aparece 2s;
+}
+@keyframes aparece {
+  /* podemos usar a palavra-chave "from" também no lugar de 0% */
+  0% {
+    opacity: 0;
+    transform: scale(0.001);
+  }
 }
 
 .palavras-chave li {
@@ -68,7 +79,24 @@ body {
     font-size: 4em;
     transform: skew(-10deg) rotate(-5deg);
     display: inline-block;
+    position: relative;
+    animation: pula 1s infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
 }
+.saudacao-ultima-linha:focus em,
+.saudacao-ultima-linha:hover em{
+  animation-play-state: paused;
+}
+@keyframes pula {
+    from {
+    top: -5px;
+    }
+    to {
+      top: 5px;
+    }
+}
+
 .saudacao strong {
     color: #000;
     font-size: 2em;
@@ -86,16 +114,28 @@ body {
     text-align: center;
     padding: .6em;
     margin: 2.4em auto;
+    text-decoration: none;
+    transition: .5s;
 }
+
+.botao-index:focus,
+.botao-index:hover {
+  background-color: #C54974;
+  color: white;
+  box-shadow: 0 0 1em #FA9;
+}
+
 .secao-inicio {
     padding: 2em;
 }
+
 .secao-inicio h2 {
     font-size: 3em;
     text-transform: uppercase;
     margin-bottom: .4em;
     text-shadow: 2px 2px #000;
 }
+
 .trabalhos {
 
     background-image: linear-gradient(135deg,
@@ -232,7 +272,7 @@ footer a:focus {
     font-weight: bold;
     color: #D5447E;
     position: absolute;
-}
+} 
 
 /* Palavras do header */
 .eficiencia {
